--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@ layout: default
         datasets: [
         {
           label: 'Dataset 1',
-          data: Utils.numbers(NUMBER_CFG),
-          borderColor: Utils.CHART_COLORS.red,
-          backgroundColor: Utils.transparentize(Utils.CHART_COLORS.red, 0.5),
+          data: [0, 1],
         },
         {
           label: 'Dataset 2',
-          data: Utils.numbers(NUMBER_CFG),
-          borderColor: Utils.CHART_COLORS.blue,
-          backgroundColor: Utils.transparentize(Utils.CHART_COLORS.blue, 0.5),
+          data: [0, 1],
         }
       ]
       },
