--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ layout: default
     new Chart(ctx, {
       type: 'line',
       data: {
-        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+        labels: ['Day 1+', 'Day 2+', 'Day 3+', 'Day 4+', 'Day 5+', 'Day 6+'],
         datasets: [
         {
-          label: 'Dataset 1',
+          label: 'Prediction CNN',
           data: [1.6177063, 1.7316897, 1.6172134, 1.4162797, 1.5552056, 1.6171052, 1.6692113, 1.6845105, 1.0855938, 1.0474999, 1.240144, 0.8835703, 1.0848897, 1.2042134, 1.1376748, 1.0990192, 1.0166998, 1.0116947, 0.7677278, 0.7285681, 0.7337599, 0.94125354, 0.9023702, 0.8197324, 0.8305545, 0.8412405, 0.95895433, 1.1864624, 1.2296569, 1.2643971, 1.2348876, 1.1920155, 1.2996083, 2.0653512, 2.2322314, 2.5672626, 1.7009492, 1.6837287, 2.4269023, 4.7509737],
         },
         {
